// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modus-wc-toast should render with custom props 1`] = `
<modus-wc-toast custom-class="test-class">
  <!---->
  <div class="modus-wc-toast modus-wc-toast-end modus-wc-toast-top test-class">
    <div>
      Custom content
    </div>
  </div>
</modus-wc-toast>
`;

exports[`modus-wc-toast should render with default props 1`] = `
<modus-wc-toast>
  <!---->
  <div class="modus-wc-toast modus-wc-toast-end modus-wc-toast-top">
    <div>
      Custom content
    </div>
  </div>
</modus-wc-toast>
`;

exports[`modus-wc-toast should render with position bottom-center 1`] = `
<modus-wc-toast position="bottom-center">
  <!---->
  <div class="modus-wc-toast modus-wc-toast-center">
    <div>
      Custom content
    </div>
  </div>
</modus-wc-toast>
`;

exports[`modus-wc-toast should render with position bottom-end 1`] = `
<modus-wc-toast position="bottom-end">
  <!---->
  <div class="modus-wc-toast modus-wc-toast-end">
    <div>
      Custom content
    </div>
  </div>
</modus-wc-toast>
`;

exports[`modus-wc-toast should render with position bottom-start 1`] = `
<modus-wc-toast position="bottom-start">
  <!---->
  <div class="modus-wc-toast modus-wc-toast-start">
    <div>
      Custom content
    </div>
  </div>
</modus-wc-toast>
`;

exports[`modus-wc-toast should render with position middle-center 1`] = `
<modus-wc-toast position="middle-center">
  <!---->
  <div class="modus-wc-toast modus-wc-toast-center modus-wc-toast-middle">
    <div>
      Custom content
    </div>
  </div>
</modus-wc-toast>
`;

exports[`modus-wc-toast should render with position middle-end 1`] = `
<modus-wc-toast position="middle-end">
  <!---->
  <div class="modus-wc-toast modus-wc-toast-end modus-wc-toast-middle">
    <div>
      Custom content
    </div>
  </div>
</modus-wc-toast>
`;

exports[`modus-wc-toast should render with position middle-start 1`] = `
<modus-wc-toast position="middle-start">
  <!---->
  <div class="modus-wc-toast modus-wc-toast-middle modus-wc-toast-start">
    <div>
      Custom content
    </div>
  </div>
</modus-wc-toast>
`;

exports[`modus-wc-toast should render with position top-center 1`] = `
<modus-wc-toast position="top-center">
  <!---->
  <div class="modus-wc-toast modus-wc-toast-center modus-wc-toast-top">
    <div>
      Custom content
    </div>
  </div>
</modus-wc-toast>
`;

exports[`modus-wc-toast should render with position top-end 1`] = `
<modus-wc-toast position="top-end">
  <!---->
  <div class="modus-wc-toast modus-wc-toast-end modus-wc-toast-top">
    <div>
      Custom content
    </div>
  </div>
</modus-wc-toast>
`;

exports[`modus-wc-toast should render with position top-start 1`] = `
<modus-wc-toast position="top-start">
  <!---->
  <div class="modus-wc-toast modus-wc-toast-start modus-wc-toast-top">
    <div>
      Custom content
    </div>
  </div>
</modus-wc-toast>
`;
